gitops/apps/dashboard/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
    creationTimestamp: "2026-01-10T14:46:41Z"
    generateName: cm-acme-http-solver-
    generation: 1
    labels:
      acme.cert-manager.io/http-domain: "2716928821"
      acme.cert-manager.io/http-token: "1164316415"
      acme.cert-manager.io/http01-solver: "true"
    name: cm-acme-http-solver-gx5q9
    namespace: dashboard
    ownerReferences:
    - apiVersion: acme.cert-manager.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Challenge
      name: dash-alphonzojonesjr-com-tls-1-1539780268-2239430186
      uid: 4e55297e-7044-4e19-bbe3-9c240071c121
    resourceVersion: "5695624"
    uid: 12fb5da6-0707-420e-b343-4904b7550871
  spec:
    rules:
    - host: www.dash.alphonzojonesjr.com
      http:
        paths:
        - backend:
            service:
              name: cm-acme-http-solver-snxjl
              port:
                number: 8089
          path: /.well-known/acme-challenge/TAMGlQgAm1zeghZ0dUW5Bgqyiwef46ThCqrZMw9gqh4
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.104
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/$2"},"name":"dashboard-ingress","namespace":"dashboard"},"spec":{"ingressClassName":"nginx","rules":[{"host":"dash.alphonzojonesjr.com","http":{"paths":[{"backend":{"service":{"name":"resource-api","port":{"number":5000}}},"path":"/api(/|$)(.*)","pathType":"ImplementationSpecific"},{"backend":{"service":{"name":"dashboard","port":{"number":80}}},"path":"/","path [...]
      nginx.ingress.kubernetes.io/rewrite-target: /$2
    creationTimestamp: "2026-01-05T20:03:17Z"
    generation: 7
    name: dashboard-ingress
    namespace: dashboard
    resourceVersion: "5695532"
    uid: 92f76274-20ce-461f-a645-01a225da905e
  spec:
    ingressClassName: nginx
    rules:
    - host: dash.alphonzojonesjr.com
      http:
        paths:
        - backend:
            service:
              name: resource-api
              port:
                number: 5000
          path: /api(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: dashboard
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.10.0.104
kind: List
metadata:
  resourceVersion: ""
